[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "devops-incident-response"
version = "1.0.0"
description = "AI SRE Agent training environment for production incident response"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
